// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot with nothing in cart 1`] = `
<DocumentFragment>
  <div
    class="cart"
  >
    <h2>
      Cart
    </h2>
    <ul />
    <p>
      Total: €0.00
    </p>
    <button>
      Checkout
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot with some stuff in cart 1`] = `
<DocumentFragment>
  <div
    class="cart"
  >
    <h2>
      Cart
    </h2>
    <ul>
      <li>
        <span
          class="size"
        >
          M
        </span>
         - 
        <span
          class="type"
        >
          The Pepperoni Pizza
        </span>
         - 
        <span
          class="price"
        >
          $12.50
        </span>
      </li>
    </ul>
    <p>
      Total: €12.50
    </p>
    <button>
      Checkout
    </button>
  </div>
</DocumentFragment>
`;
